--- a/index.html
+++ b/index.html
@@ -3,17 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>nobigomu.github.io</title>
-
+  <meta name="description" content="雑多な備忘録です">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
   <meta name="format-detection" content="telephone=no,address=no,email=no">
-
-  <meta name="description" content="雑多な備忘録です">
-
   <meta property="og:title" content="nobigomu.github.io">
   <meta property="og:description" content="雑多な備忘録です">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://nobigomu.github.io/">
-
   <link rel="stylesheet" href="/assets/index.css">
 </head>
 <body>
@@ -24,7 +20,7 @@
 
   <section>
     <table>
-    <tr><th><a href="/">under construction</a></th><td>YYYY/MM/DD</td></tr>
+    <tr><th><a href="/the3rdSunOfOct/timoku.html">23種類の地目</a></th><td>2018/11/13</td></tr>
     </table>
   </section>
 
