--- a/the3rdSunOfOct/timoku.html
+++ b/the3rdSunOfOct/timoku.html
@@ -6,7 +6,7 @@
   <meta name="description" content="地目についての条文まとめ (不規99/不準68/不準69)">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
   <meta name="format-detection" content="telephone=no,address=no,email=no">
-  <meta property="og:title" content="23種類の地目">
+  <meta property="og:title" content="23種類の地目 | nobigomu.github.io">
   <meta property="og:description" content="地目についての条文まとめ (不規99/不準68/不準69)">
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://nobigomu.github.io/the3rdSunOfOct/timoku.html">
