--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
   <section>
     <table>
+    <tr><th><a href="/experiment/using-FileReader.html">FileReaderの練習</a></th><td>2018/11/13</td></tr>
     <tr><th><a href="/the3rdSunOfOct/timoku.html">23種類の地目</a></th><td>2018/11/13</td></tr>
     </table>
   </section>
