--- a/experiment/using-FileReader.html
+++ b/experiment/using-FileReader.html
@@ -13,7 +13,7 @@
 <style>
 body, textarea { color: darkslategray; background-color: beige; }
 body { text-align: center; margin: 0; overflow-wrap: break-word; }
-footer { border-top: 1px dashed darkslategray; }
+footer { border-top: 1px dashed darkslategray; margin-top: .5em; }
 a { color: darkslategray; text-decoration: underline; }
 </style>
 </head>
