--- a/experiment/using-FileReader.html
+++ b/experiment/using-FileReader.html
@@ -11,10 +11,10 @@
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://nobigomu.github.io/experiment/using-FileReader.html">
 <style>
-body, textarea { color: darkslategray; background-color: beige; }
+body, textarea { color: #002b36; background-color: beige; }
 body { text-align: center; margin: 0; overflow-wrap: break-word; }
-footer { border-top: 1px dashed darkslategray; margin-top: .5em; }
-a { color: darkslategray; text-decoration: underline; }
+footer { border-top: 1px dashed #002b36; margin-top: .5em; }
+a { color: #002b36; text-decoration: underline; }
 </style>
 </head>
 <body>
