--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>nobigomu.github.io</title>
+  <title>nobi56.github.io</title>
   <meta name="description" content="雑多な備忘録です">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
   <meta name="format-detection" content="telephone=no,address=no,email=no">
-  <meta property="og:title" content="nobigomu.github.io">
+  <meta property="og:title" content="nobi56.github.io">
   <meta property="og:description" content="雑多な備忘録です">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://nobigomu.github.io/">
+  <meta property="og:url" content="https://nobi56.github.io/">
   <link rel="stylesheet" href="/assets/index.css">
 </head>
 <body>
 
-<header>nobigomu.github.io</header>
+<header>nobi56.github.io</header>
 
 <article>
 
@@ -28,7 +28,7 @@
 </article>
 
 <footer>
-  <p>&copy; 2018 nobigomu.github.io</p>
+  <p>&copy; 2018 nobi56.github.io</p>
 </footer>
 
 </body>
