--- a/the3rdSunOfOct/timoku.html
+++ b/the3rdSunOfOct/timoku.html
@@ -2,14 +2,14 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>23種類の地目 | nobigomu.github.io</title>
+  <title>23種類の地目 | nobi56.github.io</title>
   <meta name="description" content="地目についての条文まとめ (不規99/不準68/不準69)">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
   <meta name="format-detection" content="telephone=no,address=no,email=no">
-  <meta property="og:title" content="23種類の地目 | nobigomu.github.io">
+  <meta property="og:title" content="23種類の地目 | nobi56.github.io">
   <meta property="og:description" content="地目についての条文まとめ (不規99/不準68/不準69)">
   <meta property="og:type" content="article">
-  <meta property="og:url" content="https://nobigomu.github.io/the3rdSunOfOct/timoku.html">
+  <meta property="og:url" content="https://nobi56.github.io/the3rdSunOfOct/timoku.html">
   <link rel="stylesheet" href="/assets/article.css"></head>
 </head>
 <body>
@@ -112,11 +112,11 @@
 <footer>
   <p>
     <a href="/">top</a> &gt;
-    <!--<a href="/the3rdSunOfOct/">土地家屋調査士試験</a> &gt;-->
-    土地家屋調査士試験 &gt;
+    <!--<a href="/the3rdSunOfOct/">10月第3日曜日</a> &gt;-->
+    10月第3日曜日 &gt;
     23種類の地目
   </p>
-  <p>&copy; 2018 nobigomu.github.io</p>
+  <p>&copy; 2018 nobi56.github.io</p>
 </footer>
 
 </body>
