--- a/experiment/using-FileReader.html
+++ b/experiment/using-FileReader.html
@@ -2,14 +2,14 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>FileReaderの練習 | nobigomu.github.io</title>
+  <title>FileReaderの練習 | nobi56.github.io</title>
   <meta name="description" content="JavaScriptでローカルファイルを扱うFileReaderオブジェクトを使う練習">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
   <meta name="format-detection" content="telephone=no,address=no,email=no">
-  <meta property="og:title" content="FileReaderの練習 | nobigomu.github.io">
+  <meta property="og:title" content="FileReaderの練習 | nobi56.github.io">
   <meta property="og:description" content="JavaScriptでローカルファイルを扱うFileReaderオブジェクトを使う練習">
   <meta property="og:type" content="article">
-  <meta property="og:url" content="https://nobigomu.github.io/experiment/using-FileReader.html">
+  <meta property="og:url" content="https://nobi56.github.io/experiment/using-FileReader.html">
 <style>
 body, textarea { color: #002b36; background-color: beige; }
 body { text-align: center; margin: 0; overflow-wrap: break-word; }
@@ -39,7 +39,7 @@ https://web-designer.cman.jp/javascript_ref/window/size/
     試作 &gt;
     FileReaderの練習
   </p>
-  <p>&copy; 2018 nobigomu.github.io</p>
+  <p>&copy; 2018 nobi56.github.io</p>
 </footer>
 
 <script>
