--- a/404.html
+++ b/404.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>404 Not Found | nobigomu.github.io</title>
+  <title>404 Not Found | nobi56.github.io</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
   <meta name="format-detection" content="telephone=no,address=no,email=no">
   <meta name="robots" content="noindex,follow">
@@ -22,7 +22,7 @@
 </article>
 
 <footer>
-  <p>&copy; 2018 nobigomu.github.io</p>
+  <p>&copy; 2018 nobi56.github.io</p>
 </footer>
 
 </body>
