--- a/pastebin/index.html
+++ b/pastebin/index.html
@@ -20,17 +20,17 @@
 
   <section>
     <table>
-    <tr><th><a href="https://pastebin.com/u/nobi56/1/dujK37Vz">AWK/</a></th><td>43</td></tr>
-    <tr><th><a href="https://pastebin.com/u/nobi56/1/h7Nqd1Vy">bash/</a></th><td>2</td></tr>
-    <tr><th><a href="https://pastebin.com/u/nobi56/1/HKJjyr1h">dc/</a></th><td>35</td></tr>
-    <tr><th><a href="https://pastebin.com/u/nobi56/1/sD1fHibK">F#/</a></th><td>18</td></tr>
-    <tr><th><a href="https://pastebin.com/u/nobi56/1/GKTvrGX8">Go/</a></th><td>3</td></tr>
-    <tr><th><a href="https://pastebin.com/u/nobi56/1/gHjFa5uY">ja_JP/</a></th><td>2</td></tr>
-    <tr><th><a href="https://pastebin.com/u/nobi56/1/jegf5GDu">Kotlin/</a></th><td>16</td></tr>
-    <tr><th><a href="https://pastebin.com/u/nobi56/1/FJLAAk7m">Lua/</a></th><td>236</td></tr>
-    <tr><th><a href="https://pastebin.com/u/nobi56/1/uvCw2UCc">m4/</a></th><td>5</td></tr>
-    <tr><th><a href="https://pastebin.com/u/nobi56/1/5N1FqRmU">python/</a></th><td>23</td></tr>
-    <tr><th><a href="https://pastebin.com/u/nobi56/1/XJg0U2Q0">tips/</a></th><td>2</td></tr>
+    <tr><th><a href="/pastebin/awk.html">AWK/</a></th><td>43</td></tr>
+    <tr><th><a href="/pastebin/bash.html">bash/</a></th><td>2</td></tr>
+    <tr><th><a href="/pastebin/dc.html">dc/</a></th><td>35</td></tr>
+    <tr><th><a href="/pastebin/fsharp.html">F#/</a></th><td>18</td></tr>
+    <tr><th><a href="/pastebin/go.html">Go/</a></th><td>3</td></tr>
+    <tr><th><a href="/pastebin/ja_jp.html">ja_JP/</a></th><td>2</td></tr>
+    <tr><th><a href="/pastebin/kotlin.html">Kotlin/</a></th><td>16</td></tr>
+    <tr><th><a href="/pastebin/lua.html">Lua/</a></th><td>236</td></tr>
+    <tr><th><a href="/pastebin/m4.html">m4/</a></th><td>5</td></tr>
+    <tr><th><a href="/pastebin/python.html">python/</a></th><td>23</td></tr>
+    <tr><th><a href="/pastebin/tips.html">tips/</a></th><td>2</td></tr>
     <tr><th><a href="https://pastebin.com/RRBjYruv">shebang</a></th><td>20171228</td><td>20180523</td></tr>
     </table>
   </section>
