--- a/pastebin/awk.html
+++ b/pastebin/awk.html
@@ -69,6 +69,11 @@
 </article>
 
 <footer>
+  <p>
+    <a href="/">top</a> &gt;
+    <a href="/pastebin/">pastebin</a> &gt;
+    Index of my pastes (AWK)
+  </p>
   <p>&copy; 2018 nobi56.github.io</p>
 </footer>
 
