--- a/pastebin/golang.html
+++ b/pastebin/golang.html
@@ -20,7 +20,9 @@
 
   <section>
     <table>
-    <tr><th><a href="./"></a></th><td>under construction</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/d9XjQukM">yc419 (go)</a></th><td>20190107</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/yE2SaFaH">yc333 (go)</a></th><td>20190107</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/187d9ydi">yc604 (go)</a></th><td>20190106</td><td></td></tr>
     </table>
   </section>
 
