--- a/pastebin/tips.html
+++ b/pastebin/tips.html
@@ -20,7 +20,8 @@
 
   <section>
     <table>
-    <tr><th><a href="./"></a></th><td>under construction</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/k193M0J2">Structure needs cleaning</a></th><td>20190130</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/bJZa9cVp">using Dropbox API</a></th><td>20190121</td><td>20190130</td></tr>
     </table>
   </section>
 
