--- a/pastebin/dc.html
+++ b/pastebin/dc.html
@@ -24,7 +24,7 @@
     <tr><th><a href="https://pastebin.com/c90pN43N">yc791 (dc)</a></th><td>20190304</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/KmEgUjVn">yc21 (dc)</a></th><td>20190216</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/vptA4i25">yc785 (dc)</a></th><td>20190216</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/3Q3mqW1A">yc9000 (dc)</a></th><td>20190213</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/3Q3mqW1A">yc9000 (dc)</a></th><td>20190213</td><td>20190218</td></tr>
     <tr><th><a href="https://pastebin.com/MePWr80h">yc3032 (dc)</a></th><td>20190213</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/zz3cdXFq">yc500 (dc)</a></th><td>20190209</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/2fsuYwVt">yc216 (dc)</a></th><td>20190208</td><td></td></tr>
@@ -52,9 +52,9 @@
     <tr><th><a href="https://pastebin.com/sAR4Rrx3">yc358 (dc)</a></th><td></td><td></td></tr>
     <tr><th><a href="https://pastebin.com/HvAg7c2c">yc167 (dc)</a></th><td></td><td></td></tr>
     <tr><th><a href="https://pastebin.com/MaDDapwk">yc159 (dc)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/kzge6Qbc">yc333 (dc)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/VYmHPwRM">yc166 (dc)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/ZfCFw0SS">yc311 (dc)</a></th><td></td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/kzge6Qbc">yc333 (dc)</a></th><td>20180528</td><td>20190107</td></tr>
+    <tr><th><a href="https://pastebin.com/VYmHPwRM">yc166 (dc)</a></th><td>20180528</td><td>20190104</td></tr>
+    <tr><th><a href="https://pastebin.com/ZfCFw0SS">yc311 (dc)</a></th><td>20180523</td><td>20181229</td></tr>
     </table>
   </section>
 
