--- a/pastebin/dc.html
+++ b/pastebin/dc.html
@@ -44,7 +44,7 @@
     <tr><th><a href="https://pastebin.com/LgN3vJfU">yc428 (dc)</a></th><td></td><td></td></tr>
     <tr><th><a href="https://pastebin.com/6QSAd2Z7">yc512 (dc)</a></th><td></td><td></td></tr>
     <tr><th><a href="https://pastebin.com/7jKLiv7f">yc499 (dc)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/9dGdCu7i">yc378 (dc)</a></th><td></td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/9dGdCu7i">yc378 (dc)</a></th><td>20180603</td><td>20190313</td></tr>
     <tr><th><a href="https://pastebin.com/4jNzaHh6">yc395 (dc)</a></th><td></td><td></td></tr>
     <tr><th><a href="https://pastebin.com/BEdMp7uM">yc637 (dc)</a></th><td></td><td></td></tr>
     <tr><th><a href="https://pastebin.com/sGb6RkeH">yc9002 (dc)</a></th><td></td><td></td></tr>
