--- a/pastebin/lua.html
+++ b/pastebin/lua.html
@@ -20,7 +20,7 @@
 
   <section>
     <table>
-    <tr><th><a href="./"></a></th><td>under construction</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/DRBuPTRM">yc378</a></th><td>20180603</td><td>20190313</td></tr>
     </table>
   </section>
 
