--- a/pastebin/bash.html
+++ b/pastebin/bash.html
@@ -20,6 +20,7 @@
 
   <section>
     <table>
+    <tr><th><a href="https://pastebin.com/5HbQDpRE">yc378 (bash)</a></th><td>20190313</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/VPQskwTP">yc793 (bash)</a></th><td>20190307</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/7BDnmgeb">yc713 (bash)</a></th><td>20180718</td><td></td></tr>
     </table>
