--- a/pastebin/fsharp.html
+++ b/pastebin/fsharp.html
@@ -20,7 +20,25 @@
 
   <section>
     <table>
-    <tr><th><a href="./"></a></th><td>under construction</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/ThVkpFh3">yc793 (F#)</a></th><td>20190314</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/EWVDhMxb">yc138 (F#)</a></th><td>20190119</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/HmBB6x8y">yc316 (F#)</a></th><td>20190110</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/Z6CuRC00">yc312 (F#)</a></th><td>20190109</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/KaiWuE1G">yc683 (F#)</a></th><td>20181230</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/km8JFb4b">yc700 (F#)</a></th><td>20180702</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/0jrLe5PK">yc706 (F#)</a></th><td>20180702</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/9F2TxQj8">yc487 (F#)</a></th><td>20180608</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/FD1N7RmG">yc428 (F#)</a></th><td>20180606</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/2Ynwi3EJ">yc512 (F#)</a></th><td>20180605</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/Yn0rvQSD">yc499 (F#)</a></th><td>20180605</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/KAN3UQMZ">yc504 (F#)</a></th><td>20180603</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/C21bh1ZM">yc378 (F#)</a></th><td>20180603</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/wcb7Ffbt">yc293 (F#)</a></th><td>20180531</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/NNCR32GT">yc358 (F#)</a></th><td>20180531</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/YZSk2sgt">yc167 (F#)</a></th><td>20180531</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/jDABfHAn">yc9002 (F#)</a></th><td>20180531</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/24KqdNFh">yc3022 (F#)</a></th><td>20180531</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/cZQNcNzH">yc637 (F#)</a></th><td>20180531</td><td></td></tr>
     </table>
   </section>
 
