--- a/pastebin/lua.html
+++ b/pastebin/lua.html
@@ -20,6 +20,17 @@
 
   <section>
     <table>
+    <tr><th><a href="https://pastebin.com/L6RjeMgX">yc793 (gmp)</a></th><td>20190307</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/3bgMWJfA">yc793</a></th><td>20190305</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/gKeunAf2">yc793 (ssl bn)</a></th><td>20190305</td><td>20190307</td></tr>
+    <tr><th><a href="https://pastebin.com/L00yL0L2">yc784</a></th><td>20190208</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/pvhJHzz6">Y</a></th><td>20190108</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/NraGdHf6">church numerals</a></th><td>20190108</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/4x1Pc9p9">yc49</a></th><td>20190105</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/HnngyM4L">yc3023</a></th><td>20190102</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/HgTzJg2F">yc3016</a></th><td>20190101</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/ULMC7TW8">yc441</a></th><td>20181226</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/EcTr8wPq">yc353</a></th><td>20181226</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/DRBuPTRM">yc378</a></th><td>20180603</td><td>20190313</td></tr>
     </table>
   </section>
