--- a/pastebin/m4.html
+++ b/pastebin/m4.html
@@ -20,7 +20,11 @@
 
   <section>
     <table>
-    <tr><th><a href="./"></a></th><td>under construction</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/6Vytr1Hm">yc88 (m4)</a></th><td>20180602</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/njMEu1Zx">yc671 (m4)</a></th><td>20180602</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/MzP3JAza">yc516 (m4)</a></th><td>20180602</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/4AjnARrs">yc46 (m4)</a></th><td>20180601</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/Rj6KfYW9">yc395 (m4)</a></th><td>20180601</td><td></td></tr>
     </table>
   </section>
 
