--- a/pastebin/python.html
+++ b/pastebin/python.html
@@ -20,7 +20,29 @@
 
   <section>
     <table>
-    <tr><th><a href="./"></a></th><td>under construction</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/VK7n0Zhu">yc167 (py)</a></th><td>20190118</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/tN0KkD07">yc637 (py)</a></th><td>20190118</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/v4kAdZ29">yc487 (py)</a></th><td>20190118</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/Mu0Vwbs4">yc716 (py)</a></th><td>20190118</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/hZ1fw6Fh">yc312 (py)</a></th><td>20190110</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/rHLfdvGZ">yc316 (py)</a></th><td>20190110</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/YBe10evq">yc744 (py)</a></th><td>20181218</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/vMqVh4wz">yc604 (py)</a></th><td>20181012</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/i2bD3XxU">yc218 (py)</a></th><td>20181011</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/48y7UXXQ">yc504 (py)</a></th><td>20181011</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/Y4WuNxW2">yc5 (py)</a></th><td>20181010</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/7ciigT1D">yc481 (py)</a></th><td>20181008</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/A75bAm0Y">yc480 (py)</a></th><td>20181008</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/hs7j0mCK">yc521 (py)</a></th><td>20181007</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/m7P2PgeR">yc516 (py)</a></th><td>20181007</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/C7A4Jtyf">yc51 (py)</a></th><td>20181007</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/2sSfW0kr">yc512 (py)</a></th><td>20181007</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/tmtxFzGQ">yc293 (py)</a></th><td>20181007</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/gzpn3iS1">yc414 (py)</a></th><td>20181007</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/CdMx5YPd">yc71 (py)</a></th><td>20181006</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/ii5621T9">yc88 (py)</a></th><td>20181006</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/Rpv3D0v7">yc423 (py)</a></th><td>20181006</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/9zDnjN6H">yc739 (py)</a></th><td>20181006</td><td></td></tr>
     </table>
   </section>
 
