--- a/pastebin/lua.html
+++ b/pastebin/lua.html
@@ -31,7 +31,12 @@
     <tr><th><a href="https://pastebin.com/HgTzJg2F">yc3016</a></th><td>20190101</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/ULMC7TW8">yc441</a></th><td>20181226</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/EcTr8wPq">yc353</a></th><td>20181226</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/Ri52bWDz">C - ABC115</a></th><td>20181225</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/MW5qDnV7">B - ABC115</a></th><td>20181225</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/KtJGubAE">A - ABC115</a></th><td>20181225</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/DRBuPTRM">yc378</a></th><td>20180603</td><td>20190313</td></tr>
+    <tr><th><a href="https://pastebin.com/SWQyn7QF">yc191</a></th><td>20180328</td><td>20190314</td></tr>
+    <tr><th><a href="https://pastebin.com/H1YPuJny">yc163</a></th><td>20180316</td><td>20181226</td></tr>
     </table>
   </section>
 
