--- a/pastebin/lua.html
+++ b/pastebin/lua.html
@@ -20,6 +20,7 @@
 
   <section>
     <table>
+    <tr><th><a href="https://pastebin.com/X9g4FzXd">yc3000</a></th><td>20190513</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/HNqdXAhB">measuring elapsed time</a></th><td>20190509</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/L6RjeMgX">yc793 (gmp)</a></th><td>20190307</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/3bgMWJfA">yc793</a></th><td>20190305</td><td></td></tr>
