--- a/pastebin/lua.html
+++ b/pastebin/lua.html
@@ -20,6 +20,9 @@
 
   <section>
     <table>
+    <tr><th><a href="https://pastebin.com/prqryXWc">wrapping in pcall</a></th><td>20190720</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/MU1Me4tN">yc804</a></th><td>20190720</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/p1qKkWBp">yc841</a></th><td>20190720</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/X9g4FzXd">yc3000</a></th><td>20190513</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/HNqdXAhB">measuring elapsed time</a></th><td>20190509</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/L6RjeMgX">yc793 (gmp)</a></th><td>20190307</td><td></td></tr>
