--- a/pastebin/lua.html
+++ b/pastebin/lua.html
@@ -20,6 +20,7 @@
 
   <section>
     <table>
+    <tr><th><a href="https://pastebin.com/7xAk64u7">yc851</a></th><td>20190802</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/prqryXWc">wrapping in pcall</a></th><td>20190720</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/MU1Me4tN">yc804</a></th><td>20190720</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/p1qKkWBp">yc841</a></th><td>20190720</td><td></td></tr>
@@ -39,7 +40,49 @@
     <tr><th><a href="https://pastebin.com/Ri52bWDz">C - ABC115</a></th><td>20181225</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/MW5qDnV7">B - ABC115</a></th><td>20181225</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/KtJGubAE">A - ABC115</a></th><td>20181225</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/62iGUYhY">EX16 - APG4b</a></th><td>20181221</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/dyAswsEx">EX15 - APG4b</a></th><td>20181221</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/3x8xQ6pZ">EX14 - APG4b</a></th><td>20181221</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/rHsRCPNW">EX13 - APG4b</a></th><td>20181221</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/b351vVaF">EX12 - APG4b</a></th><td>20181221</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/7qZqB3UZ">EX10 - APG4b</a></th><td>20181221</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/XPxCGniF">EX9 - APG4b</a></th><td>20181221</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/TSkTx5qn">EX8 - APG4b</a></th><td>20181221</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/rNVyRfhZ">EX7 - APG4b</a></th><td>20181221</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/Q1z1x2JV">EX6 - APG4b</a></th><td>20181221</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/GqHgqFRh">yc773</a></th><td>20181220</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/kMb02a6S">yc721</a></th><td>20181220</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/9T7dtvMR">yc744</a></th><td>20181218</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/TdBchk8v">yc222</a></th><td>20181010</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/rGUNFGga">yc739</a></th><td>20181006</td><td>20181221</td></tr>
+    <tr><th><a href="https://pastebin.com/Nvi9uHWK">yc730</a></th><td>20180907</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/BYai4RCL">yc729</a></th><td>20180907</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/i9QSYw0c">yc380</a></th><td>20180904</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/95DiK9rK">yc725</a></th><td>20180827</td><td>20190105</td></tr>
+    <tr><th><a href="https://pastebin.com/ncaBJs9E">yc316</a></th><td>20180806</td><td>20190110</td></tr>
+    <tr><th><a href="https://pastebin.com/3yAEexW3">yc723</a></th><td>20180805</td><td>20190105</td></tr>
+    <tr><th><a href="https://pastebin.com/y7m1Sr4r">yc722</a></th><td>20180804</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/X28h3jMT">yc721</a></th><td>20180804</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/SRWutStL">yc717</a></th><td>20180730</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/ZzKZAb3W">yc716</a></th><td>20180730</td><td>20190118</td></tr>
+    <tr><th><a href="https://pastebin.com/2f1vfGLg">yc712</a></th><td>20180713</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/V6fshy5Y">yc539</a></th><td>20180708</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/Vgyv8DGW">yc81</a></th><td>20180704</td><td>20180730</td></tr>
+    <tr><th><a href="https://pastebin.com/sFwq8N3R">yc700</a></th><td>20180701</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/amBRpKYh">yc706</a></th><td>20180701</td><td>20181230</td></tr>
+    <tr><th><a href="https://pastebin.com/gvjGmVEb">yc419</a></th><td>20180610</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/w9y3ceNq">yc693</a></th><td>20180608</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/ymAztmVn">yc692</a></th><td>20180608</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/MwAUScS1">yc487</a></th><td>20180608</td><td>20190118</td></tr>
+    <tr><th><a href="https://pastebin.com/CsHWrKe9">yc428 (ssl bn)</a></th><td>20180606</td><td>20190314</td></tr>
+    <tr><th><a href="https://pastebin.com/T8mQ4WqA">yc428 (gmp)</a></th><td>20180606</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/3hhLeUWC">yc428</a></th><td>20180605</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/rvYsznFm">yc512</a></th><td>20180604</td><td>20181221</td></tr>
+    <tr><th><a href="https://pastebin.com/C9KTeu6P">yc499</a></th><td>20180604</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/fFUJJ7iX">yc490</a></th><td>20180604</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/7iibDS74">yc504</a></th><td>20180603</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/DRBuPTRM">yc378</a></th><td>20180603</td><td>20190313</td></tr>
+    <tr><th>...</th><td></td><td></td></tr>
     <tr><th><a href="https://pastebin.com/UJ0hyPbu">yc70</a></th><td>20180521</td><td>20190511</td></tr>
     <tr><th><a href="https://pastebin.com/SWQyn7QF">yc191</a></th><td>20180328</td><td>20190314</td></tr>
     <tr><th><a href="https://pastebin.com/H1YPuJny">yc163</a></th><td>20180316</td><td>20181226</td></tr>
