--- a/pastebin/kotlin.html
+++ b/pastebin/kotlin.html
@@ -20,7 +20,22 @@
 
   <section>
     <table>
-    <tr><th><a href="./"></a></th><td>under construction</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/Tq6NA8VR">yc56 (kt)</a></th><td>20190119</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/9CmsRnSV">yc316 (kt)</a></th><td>20190110</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/fF5KehE7">yc312 (kt)</a></th><td>20190109</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/KLhWWDfa">yc419 (kt)</a></th><td>20190107</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/kzvSzaj8">yc333 (kt)</a></th><td>20190107</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/3iWJRGXF">yc604 (kt)</a></th><td>20190106</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/yJUsrb47">yc542 (kt)</a></th><td>20190106</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/1qseHBN3">yc159 (kt)</a></th><td>20190105</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/UhBJDpfG">yc166 (kt)</a></th><td>20190104</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/RtHWd7Vt">yc683 (kt)</a></th><td>20181230</td><td>20190104</td></tr>
+    <tr><th><a href="https://pastebin.com/6S86XkPN">yc487 (kt)</a></th><td>20180608</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/W4qb22Zj">yc428 (kt)</a></th><td>20180606</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/LspLrU6j">yc512 (kt)</a></th><td>20180604</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/Q5aTBDcD">yc499 (kt)</a></th><td>20180604</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/KJa45JR7">yc378 (kt)</a></th><td>20180603</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/T756RMFe">yc504 (kt)</a></th><td>20180603</td><td></td></tr>
     </table>
   </section>
 
