--- a/pastebin/dc.html
+++ b/pastebin/dc.html
@@ -20,6 +20,7 @@
 
   <section>
     <table>
+    <tr><th><a href="https://pastebin.com/6kcvCJJK">yc857 (dc)</a></th><td>20190815</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/q7vwpa6J">yc191 (dc)</a></th><td>20190314</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/3xqNEZbT">yc793 (dc)</a></th><td>20190305</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/c90pN43N">yc791 (dc)</a></th><td>20190304</td><td></td></tr>
@@ -34,25 +35,25 @@
     <tr><th><a href="https://pastebin.com/LtCK35fQ">yc604 (dc)</a></th><td>20190106</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/tLNCfmx7">yc648 (dc)</a></th><td>20190101</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/bYYm3eH8">yc671 (dc)</a></th><td>20190101</td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/5d9UVxKY">yc666 (dc)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/qiTibGbz">yc72 (dc)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/kWtPrFUd">yc149 (dc)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/BKpKX3wg">yc46 (dc)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/iTqW96kt">yc481 (dc)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/5hC1gd5L">yc480 (dc)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/cX2MUVHV">yc419 (dc)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/Gi8PX2NH">yc487 (dc)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/LgN3vJfU">yc428 (dc)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/6QSAd2Z7">yc512 (dc)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/7jKLiv7f">yc499 (dc)</a></th><td></td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/5d9UVxKY">yc666 (dc)</a></th><td>20181230</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/qiTibGbz">yc72 (dc)</a></th><td>20181229</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/kWtPrFUd">yc149 (dc)</a></th><td>20181228</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/BKpKX3wg">yc46 (dc)</a></th><td>20181228</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/iTqW96kt">yc481 (dc)</a></th><td>20181008</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/5hC1gd5L">yc480 (dc)</a></th><td>20181008</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/cX2MUVHV">yc419 (dc)</a></th><td>20180610</td><td>20190107</td></tr>
+    <tr><th><a href="https://pastebin.com/Gi8PX2NH">yc487 (dc)</a></th><td>20180608</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/LgN3vJfU">yc428 (dc)</a></th><td>20180605</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/6QSAd2Z7">yc512 (dc)</a></th><td>20180604</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/7jKLiv7f">yc499 (dc)</a></th><td>20180604</td><td></td></tr>
     <tr><th><a href="https://pastebin.com/9dGdCu7i">yc378 (dc)</a></th><td>20180603</td><td>20190313</td></tr>
-    <tr><th><a href="https://pastebin.com/4jNzaHh6">yc395 (dc)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/BEdMp7uM">yc637 (dc)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/sGb6RkeH">yc9002 (dc)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/1A62bJ4b">yc3022 (dc)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/sAR4Rrx3">yc358 (dc)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/HvAg7c2c">yc167 (dc)</a></th><td></td><td></td></tr>
-    <tr><th><a href="https://pastebin.com/MaDDapwk">yc159 (dc)</a></th><td></td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/4jNzaHh6">yc395 (dc)</a></th><td>20180601</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/BEdMp7uM">yc637 (dc)</a></th><td>20180530</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/sGb6RkeH">yc9002 (dc)</a></th><td>20180530</td><td>20181010</td></tr>
+    <tr><th><a href="https://pastebin.com/1A62bJ4b">yc3022 (dc)</a></th><td>20180530</td><td>20181226</td></tr>
+    <tr><th><a href="https://pastebin.com/sAR4Rrx3">yc358 (dc)</a></th><td>20180529</td><td></td></tr>
+    <tr><th><a href="https://pastebin.com/HvAg7c2c">yc167 (dc)</a></th><td>20180528</td><td>20180529</td></tr>
+    <tr><th><a href="https://pastebin.com/MaDDapwk">yc159 (dc)</a></th><td>20180528</td><td>20190104</td></tr>
     <tr><th><a href="https://pastebin.com/kzge6Qbc">yc333 (dc)</a></th><td>20180528</td><td>20190107</td></tr>
     <tr><th><a href="https://pastebin.com/VYmHPwRM">yc166 (dc)</a></th><td>20180528</td><td>20190104</td></tr>
     <tr><th><a href="https://pastebin.com/ZfCFw0SS">yc311 (dc)</a></th><td>20180523</td><td>20181229</td></tr>
